[project]
name = "mcp-server-ipl-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "fastmcp>=2.12.3",
    "langchain-community>=0.3.29",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.7",
]
